Fixed a bug in the packages column spacing.

--- a/public/style/landing_page/_services.scss
+++ b/public/style/landing_page/_services.scss
@@ -79,13 +79,13 @@
       text-align: center;
 
       &.center {
-        @include media($medium-only) {
+        @include media($medium-up) {
           @include span-columns(4);
           @include shift(4);
         }
       }
       &.cols {
-        @include media($medium-only) {
+        @include media($medium-up) {
           @include span-columns(3);
           @include omega(12n);
         }
